# aerial_robotics_cw2_submission

./: .gitignore  README.md  README_CW2.md  launch_as2.bash  launch_ground_station.bash  mission.py  mission_centralised.py  mission_lights.py  mission_swarm.py  mission_swarm_simple_change_lights.py  pyproject.toml  requirements-dev.txt
centralised/: __init__.py  dynamic_obstacle_monitor.py  follower_controller.py  formations.py  leader_planner.py  metrics_export.py  obstacle_avoidance.py  scenario_loader.py  streaming_telemetry.py  utils.py
centralised/stages/: __init__.py  stage1_runner.py  stage2_runner.py  stage3_runner.py  stage4_runner.py
config_real/config/: config.yaml
config_sim/config/: world.yaml  world_single.yaml  world_swarm.yaml  world_swarm_stage4.yaml
config_sim/config_ground_station/: rviz2_config.rviz
config_sim/config_multicopter/: config.yaml  world.yaml  world_single.yaml  world_swarm.yaml
config_sim/gazebo/launch/: plugin_gz_bridges.launch.py
config_sim/gazebo/models/crazyflie_led_ring/: crazyflie_led_ring.sdf.jinja
config_sim/gazebo/plugins/dynamic_moving_objects/: CMakeLists.txt  package.xml
config_sim/gazebo/plugins/dynamic_moving_objects/include/: dynamic_object.hpp
config_sim/gazebo/plugins/dynamic_moving_objects/src/: dynamic_object.cpp
config_sim/gazebo/plugins/led_ring_plugin/: CMakeLists.txt  jsoncpp-namespaced-targets.cmake  package.xml
config_sim/gazebo/plugins/led_ring_plugin/include/: led_ring.hpp
config_sim/gazebo/plugins/led_ring_plugin/src/: led_ring.cpp
config_sim/gazebo/worlds/: empty_visual.sdf.jinja
config_sim/ros2/scenario_runner/: package.xml  setup.cfg  setup.py
config_sim/ros2/scenario_runner/launch/: runner.launch.py
config_sim/ros2/scenario_runner/scenario_runner/: runner.py
config_sim/rviz2/led_ring_viz/: CMakeLists.txt  package.xml
config_sim/rviz2/led_ring_viz/launch/: led_ring_viz.launch.py
config_sim/rviz2/led_ring_viz/src/: led_ring_viz.cpp
config_sim/rviz2/scenario_obstacle_viz/: package.xml  setup.cfg  setup.py
config_sim/rviz2/scenario_obstacle_viz/launch/: viz.launch.py
config_sim/rviz2/scenario_obstacle_viz/scenario_obstacle_viz/: viz.py
docs/: REFACTOR_BASELINE.md  VERIFICATION_COMMANDS.md
results/centralised/: README_对比规范.md  四阶段指标汇总_报告用.md
results/centralised/stage1/: 阶段1_仿真结果.md
results/centralised/stage2/: 阶段2_仿真结果.md
results/centralised/stage3/: 阶段3_仿真结果.md
results/centralised/stage4/: 阶段4_仿真结果.md
scenarios/: scenario1.yaml  scenario1_stage1.yaml  scenario1_stage2.yaml  scenario1_stage3.yaml  scenario1_stage4.yaml  scenario_flight_arena_stage3.yaml
scripts/: check_centralised_slim.sh  launch_sim.sh  nuke_reset.sh  run_mission.sh  run_vulture.sh  stop_sim.sh
tests/: test_streaming_telemetry.py
tmuxinator/: aerostack2.yaml  ground_station.yaml
tools/: diagnose_gazebo_gui.sh
utils/: generate_world_from_scenario.py  sdf_templates.py
