<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>scenario_runner</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="mickey.li@ucl.ac.uk">Mickey Li</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>vizualisation_msgs</depend>
  <depend>ros2_numpy</depend>
  <depend>launch_ros</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
